# bmm-nsls-bits

./: DEPLOYMENT.md  README.md  pyproject.toml
.logs/: logging.log.1  logging.log.2  logging.log.3  logging.log.4  logging.log.5  logging.log.6  logging.log.7  logging.log.8  logging.log.9
.profile/: README.md  original_bmm_module  original_startup
docs/: README_BMM.md
src/bmm_instrument/: startup.py  startup_nsls2.py
src/bmm_instrument.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bmm_instrument/callbacks/: nexus_data_file_writer_nsls2.py  spec_data_file_writer.py
src/bmm_instrument/configs/: devices.yml  devices_aps_only.yml  devices_nsls2_only.yml  iconfig.yml  iconfig_nsls2.yml
src/bmm_instrument/devices/: __init__.py  detectors.py  motors.py  optics.py  sample_environment.py  temperature.py
src/bmm_instrument/plans/: __init__.py  alignment_plans.py  basic_plans.py  scanning_plans.py  utility_plans.py  xafs_plans.py
src/bmm_instrument_qserver/: qs-config.yml  qs_host.sh
tests/: test.ipynb  test_devices.py  test_plans.py
